Backwards incompatible changes in 0.4:

* The Configure module introduces a backwards incompatible change in the
  name of the generated configuration file. In older releases the file was
  called GNUmakefile.configure.mk, starting with this release the name is
  config.$(NAME).mk. $(NAME) is the name of the project, also available as
  $(Project.Name). This also restricts the configuration system to projects
  that define a name. The background of this change is a realization that prior
  approach caused confusing an buggy behavior, where Make would search the
  include path, which also contains all of PATH, for *any* file named
  GNUmakefile.configure.mk and include the first one it found.

  Projects using zmk are advised to change their manually included
  configuration file to one that contains their project name.

Changes in 0.4:

* The Symlink template used by Library.So and Library.DyLib will now work
  correctly when invoked with -B switch (aka --always-make), by force-creating
  symbolic links that already exist.

* Program template no longer forgets to add the .exe suffix to installed executables.

* The ObjectGroup template used by Program, Program.Test, Library.A, Library.So
  and Library.Dylib now supports sub-directories in source file names. Object files
  created by the object group are now created in directories corresponding to the source
  files.

* The ObjectGroup template now supports additional C++ extensions: .cxx and .cc.
  This is in addition to the .cpp extension that was supported before.

* The ObjectGroup template used by Program, Program.Test, Library.A, Library.So
  and Library.DyLib is now performing rudimentary detection of a missing compiler.

* The GitVersion module now provides GitVersion.Origin attribute
  to indicate how the version information was obtained. The value "git" is used
  when git history along with git tags were used. The value "file" is used when
  the .version file was read.
