@@ -2,3 +2,6 @@ include z.mk
 
 libfoo.so.1.Sources = foo.c
 $(eval $(call ZMK.Expand,Library.So,libfoo.so.1))
+
+libbar.so.Sources = bar.c
+$(eval $(call ZMK.Expand,Library.So,libbar.so))
