@@ -1,0 +1,8 @@
+#include <stdlib.h>
+#include <stdio.h>
+
+int bar(void);
+
+int bar(void) {
+	return printf("Hello World\n");
+}
